data/all_generated_tests/raw_wast_tests/return_IncorrectHandlingofControlFlowAcrossModuleBoundaries_3096.wast
;; 5. **Test 5: Return with Unwind During Exception**   Create scenarios where an exception is thrown in the called function, which is imported from another module. Verify if the return and stack unwinding are handled properly post-exception.   **Constraint**: Check whether `return` correctly unwinds the operand stack and maintains stack consistency even in the presence of exceptions.   **Relation to Incorrect Handling of Control Flow**: Ensures robust exception handling in stack management across module boundaries.

(assert_invalid
  (module
    (import "env" "throw_exception" (func $throw_exception))
    (func $test_return_with_unwind_during_exception (result i32)
      (i32.const 42)
      (try (result i32)
        (do
          (call $throw_exception)
          (i32.const 0)
        )
        (catch_all
          (return)
        )
      )
    )
  )
  "type mismatch"
)